--- a/fundo.html
+++ b/fundo.html
@@ -27,8 +27,9 @@ body{
 }
 
 .area{
-    background-image: url("https://img.xatblog.net/image/kSOtn5.jpg");
-    /*background: #124a13;*/
+    background-image: url("https://img.xatblog.net/image/LH7NngzZ.jpg");
+
+	/*background: #124a13;*/
     background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);  
     width: 100%;
     height:100vh;
