--- a/fundo.html
+++ b/fundo.html
@@ -29,7 +29,7 @@ body{
 .area{
 
 
-    background-image: url("https://img.xatblog.net/image/A0e1PA.jpg");
+    background-image: url("https://i.imgur.com/ZLkHniL.png");
  /*background: #124a13;*/
     background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);  
     width: 100%;
